:sparkles: Scroll to bottom after load more. responsive fix on mobile

--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -81,6 +81,11 @@
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 1rem;
+  justify-items: center;
+}
+
+.repos-container .repository {
+  width: 100%;
 }
 
 .repos-container h1 {
@@ -149,10 +154,20 @@
 
 @media screen and (max-width: 576px) {
   .profile-link {
+    position: relative;
+    top: 0;
+    right: 0;
     font-size: 10px;
+    margin: 0 auto;
   }
 
   .profile-stats {
+    display: flex;
+    flex-direction: column;
     gap: 2rem;
+  }
+
+  .repository__desc p:last-child {
+    width: 200px; 
   }
 }
